# openmp-offloading-analysis

./: CMakeLists.txt  CUBLAS.cu  LICENSE.MD  MatrixMultiplication.cpp  MatrixMultiplication.h  README.md  helper_script.sh  main.cpp
include/: Helper.h  Helper.hpp  Host.h  Target.h  argparse.h  helper.hpp  output.hpp  preprocessor_settings.h
libs/: cmdparser.hpp
results/: diagrams.py
results/benchmark/hip/MI250/: hip.csv
results/loop_order/: loop_order_nvc.csv  loop_order_rocm.csv
scripts/: BUILD_JOBSCRIPT.sh  COMPILE.sh  COMPILE_OPENMP.sh  COMPILE_OTHER.sh  SETTINGS.sh
scripts/settings/: clang_A100.sh  clang_A100_overwrite.sh  clang_MI50.sh  clang_MI50_overwrite.sh  clang_V100.sh  clang_V100_overwrite.sh  clang_power9.sh  cuda_A100.sh  cuda_V100.sh  hip_MI50.sh  nvc_A100.sh  nvc_V100.sh  nvc_power9.sh  rocm_MI250.sh  rocm_MI250_overwrite.sh  rocm_MI50.sh  rocm_MI50_overwrite.sh  xlc_V100.sh  xlc_V100_overwrite.sh
singularity/: clang_power9.def  clang_x86_64.def  nvhpc_power9.def  nvhpc_x86_64.def  rocm_x86_64.def
src/cublas/: cuda_helper.cuh  main_cublas.cpp  matmul_cublas.cpp
src/cuda/: main_cuda.cu
src/hip/: main_hip.cpp
src/include/: Helper.h  Host.h  Target.h
src/openmp/: MatrixMultiplication.cpp  MatrixMultiplication.h  host.hpp  main.cpp  main_openmp.cpp  matmul.cpp  matmul.hpp  preprocessor_settings.h  target.hpp
src/openmp/benchmark/: benchmark.cpp  matmul.cpp  matmul.hpp  target.hpp
src/openmp/language_comparison/: tiled.c  tiled.cpp
src/openmp_compare/: tiled.cpp
src/rocblas/: error_macros.h  main_rocblas.cpp
src/rocm/: rocm.cpp
(+36 files in other folders)
